# SpellChecker

./: CMakeLists.txt  dictionary.txt  t.txt  text.txt
include/: SpellChecker.h
src/: SpellChecker.cpp  main.cpp
